[gd_scene load_steps=13 format=3 uid="uid://bcyxqnsxwd7ch"]

[ext_resource type="Script" uid="uid://u1p2n8y25bti" path="res://scenes+scripts/enemies/enemy.gd" id="1_cxuix"]
[ext_resource type="Script" uid="uid://bnaedlng2pm5g" path="res://components/sight_component.gd" id="2_htxj6"]
[ext_resource type="Script" uid="uid://dy5wryibak7ji" path="res://components/hit_box_component.gd" id="3_u4wtf"]
[ext_resource type="Script" uid="uid://drmqdd5v2r0ab" path="res://components/health_component.gd" id="4_pviu2"]
[ext_resource type="Script" uid="uid://bs1fpi6rmevxb" path="res://components/knock_back_component.gd" id="5_t81yc"]
[ext_resource type="Script" uid="uid://b6lm52i8lf8of" path="res://states/state_machine.gd" id="6_jupkn"]
[ext_resource type="Script" uid="uid://dwc5cigoae484" path="res://states/enemy_move_state.gd" id="7_3xtdc"]
[ext_resource type="Script" uid="uid://demybg254lvvm" path="res://states/enemy_slash_state.gd" id="8_n425w"]
[ext_resource type="Script" uid="uid://dxi0ool53mere" path="res://scenes+scripts/enemies/attacks/sword.gd" id="9_rxk4r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mcuwf"]
radius = 225.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4qdn0"]
radius = 37.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f7l82"]
radius = 9.0

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
motion_mode = 1
script = ExtResource("1_cxuix")

[node name="sightComponent" type="Area2D" parent="."]
script = ExtResource("2_htxj6")
targetGroup = "player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="sightComponent"]
visible = false
shape = SubResource("CircleShape2D_mcuwf")
debug_color = Color(1, 0, 0, 0)

[node name="closeSightComp" type="Area2D" parent="."]
script = ExtResource("2_htxj6")
targetGroup = "enemy"
canLeave = true
storeAll = true
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="closeSightComp"]
shape = SubResource("CircleShape2D_4qdn0")
debug_color = Color(1, 0, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f7l82")

[node name="square" type="Polygon2D" parent="."]
color = Color(0.764706, 1, 1, 1)
polygon = PackedVector2Array(9, 9, 9, 1, 8, 1, 8, -1, 9, -1, 9, -9, 1, -9, 1, -8, -1, -8, -1, -9, -9, -9, -9, -1, -8, -1, -8, 1, -9, 1, -9, 9, -1, 9, -1, 8, 1, 8, 1, 9)

[node name="square" type="Polygon2D" parent="square"]
show_behind_parent = true
scale = Vector2(1.1, 1.1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(9, 9, 9, -9, -9, -9, -9, 9)

[node name="HitBoxComponent" type="CharacterBody2D" parent="." node_paths=PackedStringArray("holder", "healthComponent", "knockbackComponent")]
collision_layer = 4
collision_mask = 4
script = ExtResource("3_u4wtf")
holder = NodePath("..")
healthComponent = NodePath("../HealthComponent")
knockbackComponent = NodePath("../KnockBackComponent")
metadata/_custom_type_script = "uid://dy5wryibak7ji"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CircleShape2D_f7l82")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("holder")]
script = ExtResource("4_pviu2")
holder = NodePath("..")
maxHealth = 1.0
metadata/_custom_type_script = "uid://drmqdd5v2r0ab"

[node name="KnockBackComponent" type="Node" parent="." node_paths=PackedStringArray("holder")]
script = ExtResource("5_t81yc")
holder = NodePath("..")
resistance = 1.0
metadata/_custom_type_script = "uid://bs1fpi6rmevxb"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("baseState")]
script = ExtResource("6_jupkn")
baseState = NodePath("enemyMoveState")
metadata/_custom_type_script = "uid://b6lm52i8lf8of"

[node name="enemyMoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("see", "closeSight", "tool", "holder", "character", "attack1")]
script = ExtResource("7_3xtdc")
see = NodePath("../../sightComponent")
closeSight = NodePath("../../closeSightComp")
closeRadius = 15.0
attackRange = 22.0
stopRange = 22.0
tool = NodePath("../../knife")
holder = NodePath("../..")
speed = 500.0
drag = 750.0
maxSpeed = 30.0
character = NodePath("../../square")
attack1 = NodePath("../enemySlashState")

[node name="enemySlashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("holder", "sight", "nextState", "sword")]
script = ExtResource("8_n425w")
holder = NodePath("../..")
sight = NodePath("../../sightComponent")
nextState = NodePath("../enemyMoveState")
sword = NodePath("../../knife")

[node name="knife" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("9_rxk4r")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="knife"]
rotation = -1.01869
polygon = PackedVector2Array(14, 2, 15, -2, 21, 0)

[node name="outline" type="Polygon2D" parent="knife"]
rotation = -1.01869
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(22, 0, 15, -3, 13, 3)

[node name="knife" type="Polygon2D" parent="knife"]
rotation = -1.01869
color = Color(0.703125, 0.703125, 0.703125, 1)
polygon = PackedVector2Array(14, 2, 15, -2, 16.8045, -1.39849, 16, 0, 17.541, -1.15299, 21, 0)

[connection signal="body_entered" from="sightComponent" to="sightComponent" method="_on_body_entered"]
[connection signal="body_entered" from="closeSightComp" to="closeSightComp" method="_on_body_entered"]
[connection signal="body_exited" from="closeSightComp" to="closeSightComp" method="_on_body_exited"]
[connection signal="body_entered" from="knife" to="knife" method="_on_body_entered"]
